my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/endian_int_return/T_endian_int_return-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENDIAN_INT_RETURN_STRUCT_H
#define T_ENDIAN_INT_RETURN_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_endian_int_return(void);


#endif /* not T_ENDIAN_INT_RETURN_STRUCT_H */
